--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
   "name": "DATFIN",
   "version": "1.0.0",
-  "description": "",
+  "description": "Data Finances System",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js", 
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "./node_modules/.bin/mocha --reporter spec"
-
   },
   "keywords": [],
-  "author": "",
+  "author": "andresdfx",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
-    "ejs": "^2.7.2",
     "express": "^4.17.1",
     "mocha": "^7.0.1"
+  },
+  "engines": {
+    "node": "12.16.0"
   },
   "devDependencies": {
     "mocha": "^7.0.1",
