--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,6 @@ sonar.sources=./routes
 sonar.exclusions=.properties, Dockerfile, *.md, node_modules/**, test/**, coverage/**,*.sh, configuration.js
 sonar.tests=test/
 
+sonar.javascript.jstest.reportsPath=coverage
+sonar.javascript.lcov.reportPath=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
