--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,16 @@ node_js:
  - "node"
 notifications:
   email:
-    - andres_dfx@hotmail.com
+    - castano.julian@correounivalle.edu.co
 jdk:
   - oraclejdk8
 addons:
   sonarcloud: true
 script:
+  - npm run cover
   - sonar-scanner -Dsonar.login=$SONAR_CLOUD -Dsonar.organization=andresdfx-github -Dsonar.projectKey=datfin -Dsonar.sources='./routes' -X
+after_success:
+  - npm run coveralls
 deploy:
   provider: heroku
   api_key:
