--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
+    "@mdi/font": "^5.0.45",
     "axios": "^0.19.2",
     "eslint": "^5.16.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.2.20"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
