--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "DATFIN",
   "version": "1.0.0",
   "description": "Data Finances System",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "keywords": [],
@@ -18,8 +18,12 @@
     "coverage": "^0.4.1",
     "express": "^4.17.1",
     "istanbul": "^0.4.5",
+    "joi": "^14.3.1",
     "mocha": "^7.0.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^8.0.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.5"
   },
   "engines": {
     "node": "12.16.0"
